# cpp-problems

./: .gitignore  README.md
banking_system/: .gitignore  CMakeLists.txt  README.md  account.cpp  account.h  bank.db  bank_account.cpp  bank_account.h  checking_account.cpp  checking_account.h  command_line_interface.cpp  command_line_interface.h  conanfile.py  funds.cpp  funds.h  funds_eur.cpp  funds_eur.h  funds_pln.cpp  funds_pln.h  funds_usd.cpp  funds_usd.h  i_account.h  i_account_balance.h  i_funds.h  i_manager.h  main.cpp  maintance.cpp  maintance.h  maintenance.cpp  maintenance.h  manager_factory.h  person.cpp  person.h  premium_account.cpp  premium_account.h  premium_account_manager.cpp  premium_account_manager.h  premium_account_manager_factory.h  saving_account.cpp  saving_account.h  (+6 more)
banking_system/apps/: CMakeLists.txt  main.cpp
banking_system/exceptions/: client_not_found.h  exception.h  invalid_money_value.h  invalid_person_data_entry.h  invalid_person_data_input.h  no_accounts_found_for_given_client_id.h  no_clients_present.h  not_enough_funds.h
banking_system/include/banking/: account.h  banking_database.h  command_line_interface.h  funds.h  maintenance.h  person.h  premium_account.h  premium_account_manager.h  standard_account.h  standard_account_manager.h  standard_account_manager_factory.h
banking_system/include/exceptions/: exception.h  no_clients_present.h
banking_system/include/interfaces/: i_database.h  i_json_serializable.h  i_manager.h  i_manager_factory.h
banking_system/include/project/: standard_account.h
banking_system/include/utils/: json_serializer.h  sqlite_wrapper.h
banking_system/include/validators/: person_validator.h  validator.h
banking_system/interfaces/: i_account.h  i_funds.h  i_manager.h
banking_system/src/: CMakeLists.txt  account.cpp  banking_database.cpp  command_line_interface.cpp  exception.cpp  funds.cpp  funds_eur.cpp  funds_pln.cpp  funds_usd.cpp  json_serializer.cpp  maintenance.cpp  person.cpp  person_validator.cpp  premium_account.cpp  premium_account_manager.cpp  premium_account_manager_factory.cpp  standard_account.cpp  standard_account_manager.cpp  standard_account_manager_factory.cpp
banking_system/src/exceptions/: invalid_person_data_input.h  not_enough_funds.h
derived_types/: CMakeLists.txt  main.cpp
encryption/: CMakeLists.txt  base_caesar.h  caesar.cpp  caesar.h  i_encryption.h  improved_caesar.cpp  improved_caesar.h  main.cpp  modern_caesar.cpp  modern_caesar.h
smallest_values/: CMakeLists.txt  main.cpp
